--- a/Webpage.html
+++ b/Webpage.html
@@ -43,28 +43,28 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+<div class="w3-content" style="max-width:1000px;margin-top:20;min-width:1000px;margin-bottom:20px">
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="/w3images/la.jpg" style="width:100%">
+    <img src="C:Code\Kilimanjaro\Images\kili1.jpg" style="width:99%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <h3>Africa's Highest Peak</h3>
+      <p><b>Starting from Arusha</b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="/w3images/ny.jpg" style="width:100%">
+    <img src="C:Code\Kilimanjaro\Images\kili2.jpg" style="width:99%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      <h3>9 days of trekking...</h3>
+      <p><b>Spanning over 9 days</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="/w3images/chicago.jpg" style="width:100%">
+    <img src="C:Code\Kilimanjaro\Images\kili3.jpg" style="width:99%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      <h3>See you in December</h3>
+      <p><b>(Bring on the Elephants)</b></p>    
     </div>
   </div>
 
